syntax = "proto3";



option go_package = "Chit-Chat/gRPC/proto";


message Chits {
    string chit = 1;
    string author = 2;
    string timeFormated = 3;
}

message Empty {}

message join {
    Author author = 1;
    string time = 2;
}

message joinRequest{
    Author author = 1;
}

message leave {
    Author author = 1;
    string time = 2;
}

message Author{
    string id = 1;
    string name = 2;
}

message Connect{
    Author author = 1;
    bool active = 2;
}

service ChitChat {
    rpc SendChits (Chits) returns (Empty) {};
    rpc JoinChit (joinRequest)  returns (stream Chits) {};
    rpc leaveChit (leave) returns (Empty) {};
}